Added dictionary capability
Added English and Spanish dictionary, alongside DataFaker, for more reliable data generation.